--- a/package.json
+++ b/package.json
@@ -13,4 +13,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
+  "name": "testremo",
+  "version": "0.1" {
+  "test": "print ciao"
+  }
 }
